--- a/style.css
+++ b/style.css
@@ -1,98 +1,57 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700");
 @import url("https://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css");
 
-html, body {
-  height: 100%;
+html {
+  min-height: 100%;
 }
 
 #header {
    display: flex;
-   flex-direction: row;
+   flex-flow: row wrap;
    justify-content: space-between;
    align-items: center;
    margin: 2em;
    gap: 2em;
-
 }
 
-.x-axis { 
-   font: 17px sans-serif; 
+body {
+  font: 14px/1 'Open Sans', sans-serif;
+  color: #555;
+  background-color: #f4f0f2;
 }
 
-.y-axis { 
-  font: 17px sans-serif; 
+main {
+  min-width: 320px;
+  max-width: 70%;
+  margin: 0 auto;
+  height: 100%;
+  /* background: #fff; */
 }
 
-.overlay {
-  fill: none;
-  pointer-events: all;
+section {
+  display: none;
+  padding: 2em;
+  margin-bottom: 5vh;
+  /* height: 50%; */
+  /* border-top: 1px solid #eee; */
+  /* border-radius: 0 1em 1em 1em; */
 }
 
- *, *:before, *:after {
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
- }
- 
- 
- body {
-   font: 14px/1 'Open Sans', sans-serif;
-   color: #555;
-   background-color: #f4f0f2;
- }
-
- #source_selector {
-   /* display: flex; */
-   flex-direction: row;
-   justify-content: center;
-   align-items: center;
-   align-content: center;
- }
- #source_selector * {
-  padding: 0.5em;
+section h2 {
+  margin-bottom: 1em;
 }
 
- #people {
-   display: flex;
-   justify-content: space-evenly;
-   flex-wrap: wrap; 
- }
-
- .center_affiliate {
-  background-color: #fff;
-  flex-direction: column;
-  justify-content: center;
-  /* border: 1px solid black; */
-  /* border-radius: 20px; */
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  display: flex;
-  width: 20%;
-  /* height: 100%; */
-  padding: 1em;
-  margin: 1em;
-  /* flex-grow: 1; */
-  transition-duration: 500ms;
-  transition-timing-function: ease-in-out;
-}
-
-.center_affiliate a {
-  color: #e77500;
+#content1 {
+  /* display: inline-block; */
   text-align: center;
-  text-decoration: none;
 }
 
-.center_affiliate:hover {
-  box-shadow: 0 12px 24px 0 rgba(0,0,0,0.2);
-  text-decoration: underline;
-}
-
-.center_affiliate img {
-  margin: 0.5em 0;
-  width: 95%;
-}
+/* #content3 {
+  height: 95vh;
+} */
 
 
- h1 {
+h1 {
   padding-bottom: 30px;
   font-weight: 800;
   text-align: center;
@@ -108,36 +67,81 @@ footer {
   background-color: #eee;
   color: #f58025;
   padding: 20px;
-  position: fixed;
+  /* position: fixed; */
   height: 50px;
   width: 100%;
   flex-shrink: 0;
   text-align: center;
   left: 0;
   bottom: 0;
-  padding: 2em 0 4em;
+  padding: 2em 0 2em;
 }
 
-main {
-  min-width: 320px;
-  max-width: 70%;
-  margin: 0 auto;
-  /* background: #fff; */
+/* D3.js styling */
+#svg-container {
+  resize: both;
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  padding-bottom: 60%;
+  vertical-align: top;
+  /* overflow: hidden; */
 }
 
-section {
-  display: none;
-  padding: 2em;
-  /* border-top: 1px solid #eee; */
-  /* border-radius: 0 1em 1em 1em; */
+.svg-content {
+  /* display: inline-block; */
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-section h2 {
-  margin-bottom: 1em;
+.x-axis { 
+   font: 17px sans-serif; 
+}
+
+.y-axis { 
+  font: 17px sans-serif; 
+}
+
+.overlay {
+  fill: none;
+  pointer-events: all;
+}
+/* -------------------- */
+
+/* *, *:before, *:after {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+} */
+ 
+ 
+/* Tab bar  */
+#source_selector {
+  /* display: flex; */
+  flex-direction: row;
+   justify-content: center;
+   align-items: center;
+   align-content: center;
+   margin-bottom: 2%;
+}
+
+#source_selector * {
+  padding: 0.5em;
+  font-size: 1.25vw;
 }
 
 .tabs {
   display: none;
+}
+
+#tab1:checked ~ #content1,
+#tab2:checked ~ #content2,
+#tab3:checked ~ #content3,
+#tab4:checked ~ #content4 {
+  display: block;
+  background-color: #fff;
 }
 
 label {
@@ -186,22 +190,50 @@ input:checked + label {
   border-bottom: 1px solid #fff; */
   /* border-radius: 1em 1em 0px 0px; */
 }
+/* ------------------------- */
 
-#content1 {
-  /* display: inline-block; */
-  text-align: center;
- }
-
-#content3 {
-  height: 80%;
+/* About Us card design */
+#people {
+   display: flex;
+   justify-content: space-evenly;
+   flex-wrap: wrap; 
 }
-#tab1:checked ~ #content1,
-#tab2:checked ~ #content2,
-#tab3:checked ~ #content3,
-#tab4:checked ~ #content4 {
-  display: block;
+
+.center_affiliate {
   background-color: #fff;
+  flex-direction: column;
+  justify-content: center;
+  /* border: 1px solid black; */
+  /* border-radius: 20px; */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  display: flex;
+  width: 20%;
+  /* height: 100%; */
+  padding: 1em;
+  margin: 1em;
+  /* flex-grow: 1; */
+  transition-duration: 500ms;
+  transition-timing-function: ease-in-out;
 }
+
+.center_affiliate a {
+  color: #e77500;
+  text-align: center;
+  text-decoration: none;
+}
+
+.center_affiliate:hover {
+  box-shadow: 0 12px 24px 0 rgba(0,0,0,0.2);
+  text-decoration: underline;
+}
+
+.center_affiliate img {
+  margin: 0.5em 0;
+  width: 95%;
+}
+/* ------------------------- */
+
+/* Media Queries */
 
 @media screen and (max-width: 1260px) {
   .center_affiliate {
