--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 html, body {
-  font: 15px/1 Roboto,Helvetica Neue,sans-serif;
+  font: 15px/1 'Montserrat';
   color: #555;
   height: 100%;
   width: 100%;
@@ -128,11 +128,12 @@ footer {
   justify-content: center;
   align-items: center;
   position: relative;
-  width: 80%;
-  margin-top: 0.5%;
-  /* padding-bottom: 50%; */
+  width: 95%;
+  height: 100%;
+  /* margin-top: 0.5%; */
+  /* padding: 2%; */
   vertical-align: top;
-  border: 1px dashed black;
+  /* border: 1px dashed black; */
   overflow: auto;
 }
 
